data/derived/fa15/progs/unify/prog3154.ml.out
Characters 48-54:
  let stringOfList f l = sepConcat "; ", List.map (f, l);;
                                                  ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
